--- a/Startuply_HTML/index-clickthrough.html
+++ b/Startuply_HTML/index-clickthrough.html
@@ -202,10 +202,10 @@
 	<section id="testimonials" class="section process-section align-center dark-text">
 		<div class="container">
 			<div class="section-content row">
-				<div class="col-sm-6 pull-right animated" data-duration="500" data-animation="fadeInRight">
-					<img src="assets/img/testimonial-headshots/headshot_1.jpg" class="img-responsive" alt="process 2" />
+				<div class="col-sm-4 pull-right animated" data-duration="500" data-animation="fadeInRight">
+					<img src="assets/img/testimonial-headshots/John.jpg" class="img-responsive pull-right" alt="process 2" style="height: 300px; width: 400px;"/>
 				</div>
-				<div class="col-sm-6 align-left animated" data-duration="500" data-animation="fadeInLeft">
+				<div class="col-sm-8 align-left animated" data-duration="500" data-animation="fadeInLeft">
 					<br/><br/>
 					<article>
 						<h5>"I needed more referrals..."<br></h5>
@@ -219,10 +219,10 @@
 
 				<hr class="clearfix" />
 
-				<div class="col-sm-6 animated" data-duration="500" data-animation="fadeInLeft">
-					<img src="assets/img/testimonial-headshots/headshot_2.jpg" class="img-responsive" alt="process 3" style="height: 350px"/>
+				<div class="col-sm-4 animated" data-duration="500" data-animation="fadeInLeft">
+					<img src="assets/img/testimonial-headshots/Mary.jpg" class="img-responsive" alt="process 3" style="height: 350px"/>
 				</div>
-				<div class="col-sm-6 align-left animated" data-duration="500" data-animation="fadeInRight">
+				<div class="col-sm-8 align-left animated" data-duration="500" data-animation="fadeInRight">
 					<br/><br/>
 					<article>
 						 <h5>
@@ -240,10 +240,10 @@
 
 				<hr class="clearfix" />
 
-				<div class="col-sm-6 pull-right animated" data-duration="500" data-animation="fadeInRight">
-					<img src="assets/img/testimonial-headshots/headshot_3.jpg" class="img-responsive" alt="process 2" />
+				<div class="col-sm-4 pull-right animated" data-duration="500" data-animation="fadeInRight">
+					<img src="assets/img/testimonial-headshots/Mike.jpg" class="img-responsive pull-right" alt="process 2"/>
 				</div>
-				<div class="col-sm-6 align-left animated" data-duration="500" data-animation="fadeInLeft">
+				<div class="col-sm-8 align-left animated" data-duration="500" data-animation="fadeInLeft">
 					<br/><br/>
 					<article>
 						<h5>"I was waisting time and money on outdated marketing strategies..."<br></h5>
@@ -257,10 +257,10 @@
 
 				<hr class="clearfix" />
 
-				<div class="col-sm-6 animated" data-duration="500" data-animation="fadeInLeft">
-					<img src="assets/img/testimonial-headshots/headshot_4.jpeg" class="img-responsive" alt="process 3" />
+				<div class="col-sm-4 animated" data-duration="500" data-animation="fadeInLeft">
+					<img src="assets/img/testimonial-headshots/Joel.jpg" class="img-responsive" alt="process 3"/>
 				</div>
-				<div class="col-sm-6 align-left animated" data-duration="500" data-animation="fadeInRight">
+				<div class="col-sm-8 align-left animated" data-duration="500" data-animation="fadeInRight">
 					<br/><br/>
 					<article>
 						 <h5>
@@ -341,27 +341,27 @@
 
                         <div class="tab-content">
                             <div class="tab-pane in active" id="cbn">
-                                <img src="assets/img/features/main_page.png" class="img-responsive animated" data-duration="900" data-animation="flip3dInTop" alt="macbook"/>
+                                <img src="assets/img/features/main_page.png" class="img-responsive animated" data-duration="900" data-animation="flip3dInTop" alt="macbook"smtyle="width: 912px; height:551px;"/>
                                 <h6>Custom branded quality newsletters automatically sent out weekly to prospects and clients.</h6>
                             </div>
                             <div class="tab-pane" id="social-media">
-                                <img src="assets/img/features/first_financial.png" class="img-responsive animated" data-duration="900" data-animation="roll3dInLeft" alt="macbook" />
+                                <img src="assets/img/features/first_financial.png" class="img-responsive animated" data-duration="900" data-animation="roll3dInLeft" alt="macbook" style="width: 912px; height:551px;"/>
                                 <h6> Automatic daily social media posting.</h6>
                             </div>
                             <div class="tab-pane" id="opt-in">
-                                <img src="assets/img/features/Broussard1.png" class="img-responsive animated" data-duration="900" data-animation="fadeInRight" alt="macbook" style="width: 900px;"/>
+                                <img src="assets/img/features/Broussard1.png" class="img-responsive animated" data-duration="900" data-animation="fadeInRight" alt="macbook" style="width: 912px; height:551px;"/>
                                <h6> Easily send high quality articles. </h6>
                             </div>
                             <div class="tab-pane" id="brand">
-                                <img src="assets/img/features/doessier.png" class="img-responsive animated" data-duration="900" data-animation="flip3dInTop" alt="macbook"/>
+                                <img src="assets/img/features/doessier.png" class="img-responsive animated" data-duration="900" data-animation="flip3dInTop" alt="macbook" style="width: 912px; height:551px;"/>
                                 <h6> Premium, licensed content from the top publishers in the world.  </h6>
                             </div>
                             <div class="tab-pane" id="lead">
-                                <img src="assets/img/features/linked_in.png" class="img-responsive animated" data-duration="900" data-animation="roll3dInLeft" alt="macbook" style="margin-right: -100px;"/>
+                                <img src="assets/img/features/linked_in.png" class="img-responsive animated" data-duration="900" data-animation="roll3dInLeft" alt="macbook" style="width: 912px; height:601px;"/>
                                 <h6> Automatically capture new leads with custom opt in an analytics. </h6>
                             </div>
                             <div class="tab-pane" id="content">
-                                <img src="assets/img/features/rich_features_3.png" class="img-responsive animated" data-duration="900" data-animation="fadeInRight" alt="macbook" />
+                                <img src="assets/img/features/rich_features_3.png" class="img-responsive animated" data-duration="900" data-animation="fadeInRight" alt="macbook" style="width: 912px; height:551px;"/>
                                 <h6> Finra and IROC complient content</h6>
                             </div>
                         </div>
