modified mobile look and feel

--- a/Startuply_HTML/index-clickthrough.html
+++ b/Startuply_HTML/index-clickthrough.html
@@ -341,27 +341,27 @@
 
                         <div class="tab-content">
                             <div class="tab-pane in active" id="cbn">
-                                <img src="assets/img/features/main_page.png" class="img-responsive animated" data-duration="900" data-animation="flip3dInTop" alt="macbook"smtyle="width: 912px; height:551px;"/>
+                                <img src="assets/img/features/main_page.png" class="comp-pics animated" data-duration="900" data-animation="flip3dInTop" alt="macbook"/>
                                 <h6>Custom branded quality newsletters automatically sent out weekly to prospects and clients.</h6>
                             </div>
                             <div class="tab-pane" id="social-media">
-                                <img src="assets/img/features/first_financial.png" class="img-responsive animated" data-duration="900" data-animation="roll3dInLeft" alt="macbook" style="width: 912px; height:551px;"/>
+                                <img src="assets/img/features/first_financial.png" class="comp-pics animated" data-duration="900" data-animation="roll3dInLeft" alt="macbook"/>
                                 <h6> Automatic daily social media posting.</h6>
                             </div>
                             <div class="tab-pane" id="opt-in">
-                                <img src="assets/img/features/Broussard1.png" class="img-responsive animated" data-duration="900" data-animation="fadeInRight" alt="macbook" style="width: 912px; height:551px;"/>
+                                <img src="assets/img/features/Broussard1.png" class="comp-pics animated" data-duration="900" data-animation="fadeInRight" alt="macbook"/>
                                <h6> Easily send high quality articles. </h6>
                             </div>
                             <div class="tab-pane" id="brand">
-                                <img src="assets/img/features/doessier.png" class="img-responsive animated" data-duration="900" data-animation="flip3dInTop" alt="macbook" style="width: 912px; height:551px;"/>
+                                <img src="assets/img/features/doessier.png" class="comp-pics animated" data-duration="900" data-animation="flip3dInTop" alt="macbook"/>
                                 <h6> Premium, licensed content from the top publishers in the world.  </h6>
                             </div>
                             <div class="tab-pane" id="lead">
-                                <img src="assets/img/features/linked_in.png" class="img-responsive animated" data-duration="900" data-animation="roll3dInLeft" alt="macbook" style="width: 912px; height:601px;"/>
+                                <img src="assets/img/features/linked_in.png" class="comp-pics animated" data-duration="900" data-animation="roll3dInLeft" alt="macbook"/>
                                 <h6> Automatically capture new leads with custom opt in an analytics. </h6>
                             </div>
                             <div class="tab-pane" id="content">
-                                <img src="assets/img/features/rich_features_3.png" class="img-responsive animated" data-duration="900" data-animation="fadeInRight" alt="macbook" style="width: 912px; height:551px;"/>
+                                <img src="assets/img/features/rich_features_3.png" class="comp-pics animated" data-duration="900" data-animation="fadeInRight" alt="macbook"/>
                                 <h6> Finra and IROC complient content</h6>
                             </div>
                         </div>
@@ -384,79 +384,79 @@
 						<img src="assets/img/Clients/ALLSTATE.png" alt="Allstate" style="width: 70px; height: 40px;"/>
 					</article>
 				</div>
-				<div class="col-md-2 col-sm-6 col-xs-12 client-img">
+				<div class="col-md-2 col-sm-4 col-xs-6 client-img">
 					<article class="align-center">
 						<img src="assets/img/Clients/ameriprise-finanical.png" alt="Emeriprise" style="width: 50px; height: 50px;"/>
 					</article>
 				</div>
-                <div class="col-md-2 col-sm-6 col-xs-12 client-img">
+                <div class="col-md-2 col-sm-4 col-xs-6 client-img">
 					<article class="align-center">
                         <img src="assets/img/Clients/Scotia.jpg" alt="Scoita" style="width: 50px; height: 50px;"/>
 					</article>
 				</div>
-                <div class="col-md-2 col-sm-6 col-xs-12 client-img">
+                <div class="col-md-2 col-sm-4 col-xs-6 client-img">
 					<article class="align-center">
                         <img src="assets/img/Clients/SEI.png" alt="SEI" style="width: 50px; height: 50px;"/>
 					</article>
 				</div>
-				<div class="col-md-2 col-sm-6 col-xs-12 client-img">
+				<div class="col-md-2 col-sm-4 col-xs-6 client-img">
 					<article class="align-center">
                         <img src="assets/img/Clients/TD.png" alt="TD" style="width: 50px; height: 50px;"/>
 					</article>
 				</div>
-				<div class="col-md-2 col-sm-6 col-xs-12 client-img">
+				<div class="col-md-2 col-sm-4 col-xs-6 client-img">
 					<article class="align-center">
                         <img src="assets/img/Clients/New-York-Life.png" alt="New York Life" style="width: 50px; height: 50px;"/>
 					</article>
 				</div>
-				<div class="col-md-2 col-sm-6 col-xs-12 client-img">
+				<div class="col-md-2 col-sm-4 col-xs-6 client-img">
 					<article class="align-center">
                         <img src="assets/img/Clients/Common-Wealth-Financial.jpg" alt="Commonwealth" style="width: 50px; height: 50px;"/>
 					</article>
 				</div>
-				<div class="col-md-2 col-sm-6 col-xs-12 client-img">
+				<div class="col-md-2 col-sm-4 col-xs-6 client-img">
 					<article class="align-center">
                         <img src="assets/img/Clients/National-Bank.png" alt="National-Bank" style="width: 50px; height: 50px;"/>
 					</article>
 				</div>
 			</div>
 			<div class="clearfix animated" data-duration="500" data-animation="fadeInLeft">
-				<div class="col-md-2 col-sm-6 col-xs-12 client-img">
+				<div class="col-md-2 col-sm-4 col-xs-6 client-img">
 					<article class="align-center">
                         <img src="assets/img/Clients/Mandeville-Private-Client.png" alt="Mandeville" style="width: 50px; height: 50px;"/>
 					</article>
 				</div>
-				<div class="col-md-2 col-sm-6 col-xs-12 client-img">
+				<div class="col-md-2 col-sm-4 col-xs-6 client-img">
 					<article class="align-center">
                         <img src="assets/img/Clients/freedom-55-financial.png" alt="Freedom55" style="width: 70px; height: 70px; margin-top: -10px;"/>
 					</article>
 				</div>
-				<div class="col-md-2 col-sm-6 col-xs-12 client-img">
+				<div class="col-md-2 col-sm-4 col-xs-6 client-img">
 					<article class="align-center">
                         <img src="assets/img/Clients/mass-mutual.png" alt="Mass Mutual" style="width: 50px; height: 50px;"/>
 					</article>
 				</div>
-				<div class="col-md-2 col-sm-6 col-xs-12 client-img">
+				<div class="col-md-2 col-sm-4 col-xs-6 client-img">
 					<article class="align-center">
                         <img src="assets/img/Clients/Horizon-Financial.png" alt="Horizon" style="width: 85px; height: 40px;"/>
 					</article>
 				</div>
-				<div class="col-md-2 col-sm-6 col-xs-12 client-img">
+				<div class="col-md-2 col-sm-4 col-xs-6 client-img">
 					<article class="align-center">
                         <img src="assets/img/Clients/IndustrialAliance.png" alt="Industrial Alliance" style="width: 75px; height: 45px;"/>
 					</article>
 				</div>
-				<div class="col-md-2 col-sm-6 col-xs-12 client-img">
+				<div class="col-md-2 col-sm-4 col-xs-6 client-img">
 					<article class="align-center">
                         <img src="assets/img/Clients/Primerica.png" alt="Primerica" style="width: 50px; height: 50px;"/>
 					</article>
 				</div>
-				<div class="col-md-2 col-sm-6 col-xs-12 client-img">
+				<div class="col-md-2 col-sm-4 col-xs-6 client-img">
 					<article class="align-center">
                         <img src="assets/img/Clients/ipl.png" alt="IPL" style="width: 100px; height: 17px; margin-top: 15px; "/>
 					</article>
 				</div>
-				<div class="col-md-2 col-sm-6 col-xs-12 client-img">
+				<div class="col-md-2 col-sm-4 col-xs-6 client-img">
 					<article class="align-center">
                         <img src="assets/img/Clients/United-Advisors.png" alt="United" style="width: 50px; height: 50px;"/>
 					</article>
@@ -688,8 +688,6 @@
 		</div>
 		<div class="copyright">Advisor Stream INC. All rights reserved.</div>
 	</footer>
-
-	<div class="back-to-top"><i class="fa fa-angle-up fa-3x"></i></div>
 
 	<!--[if lt IE 9]>
 		<script type="text/javascript" src="assets/js/jquery-1.11.3.min.js?ver=1"></script>
