--- a/Startuply_HTML/index-clickthrough.html
+++ b/Startuply_HTML/index-clickthrough.html
@@ -203,7 +203,7 @@
 		<div class="container">
 			<div class="section-content row">
 				<div class="col-sm-4 pull-right animated" data-duration="500" data-animation="fadeInRight">
-					<img src="assets/img/testimonial-headshots/John.jpg" class="img-responsive pull-right" alt="process 2" style="height: 300px; width: 400px;"/>
+					<img src="assets/img/testimonial-headshots/John.jpg" class="img-responsive pull-right" alt="process 2" style="height: 280px; width: 470px;"/>
 				</div>
 				<div class="col-sm-8 align-left animated" data-duration="500" data-animation="fadeInLeft">
 					<br/><br/>
@@ -357,7 +357,7 @@
                                 <h6> Premium, licensed content from the top publishers in the world.  </h6>
                             </div>
                             <div class="tab-pane" id="lead">
-                                <img src="assets/img/features/linked_in.png" class="comp-pics animated" data-duration="900" data-animation="roll3dInLeft" alt="macbook"/>
+                                <img src="assets/img/features/linked_in.png" class="comp-pics-1 animated" data-duration="900" data-animation="roll3dInLeft" alt="macbook"/>
                                 <h6> Automatically capture new leads with custom opt in an analytics. </h6>
                             </div>
                             <div class="tab-pane" id="content">
