formatted loggin and hid

--- a/Startuply_HTML/index-clickthrough.html
+++ b/Startuply_HTML/index-clickthrough.html
@@ -58,27 +58,9 @@
 						<li><a href="#team">Team</a></li>
 					</ul>
 					<ul class="navigation-bar navigation-bar-right">
-						<li class="dropdown" id="login1">
-							<a class="dropdown-toggle" href="#" data-toggle="dropdown" id="navLogin1" aria-expanded="true">Login</a>
-							<div class="dropdown-menu pull-right wider-dropdown-form dropdown-overflow-scroll">
-								<div class="col-md-12">
-									<div class="panel panel-info">
-										<div class="panel-heading login-header">
-											<div class="panel-title">Sign In</div>
-										</div>
-										<div class="panel-body">
-											body
-										</div>
-									</div>
-								</div>
-							</div>
-						</li>
-
-
-
-						<li class="dropdown" id="login">
+						<li class="dropdown" id="login" style="display: none">
 							<a class="dropdown-toggle" href="#" data-toggle="dropdown" id="navLogin" aria-expanded="true">Login</a>
-							<div id="innerdropdownform" class="dropdown-menu pull-right wider-dropdown-form dropdown-overflow-scroll">
+							<div id="innerdropdownform" class="dropdown-menu pull-right wider-dropdown-form">
 								<div id="loginbox" sytle="margin-top:20px" class="mainbox col-md-12">
 									<div class="panel panel-info">
 										<div class="panel-heading">
