--- a/index-clickthrough.html
+++ b/index-clickthrough.html
@@ -478,7 +478,7 @@
                         <div class="team-member">
                             <div class="photo-wrapper">
                                 <div class="overlay-wrapper">
-                                    <img src="assets/img/team/kevin2.jpg" alt="Kevin">
+                                    <img src="assets/img/team/Kevin2.jpg" alt="Kevin">
                                     <div class="overlay-content">
                                         <div class="text-wrapper">
                                             <div class="text-container">
