Changed link to open

--- a/index-clickthrough.html
+++ b/index-clickthrough.html
@@ -24,7 +24,7 @@
 	<!-- Calendly badge widget begin -->
 	<link href="https://calendly.com/assets/external/widget.css" rel="stylesheet">
 	<script src="https://calendly.com/assets/external/widget.js" type="text/javascript"></script>
-	<script type="text/javascript">Calendly.showBadgeWidget({url: 'https://calendly.com/advisor-stream-demo-team', text: 'Book Demo', color: '#5b2883', branding: false});</script>
+	<script type="text/javascript">Calendly.showBadgeWidget({url: 'https://calendly.com/advisor-stream-demo-team/discovery-demo/06-16-2016?back=1', text: 'Book Demo', color: '#5b2883', branding: false});</script>
 	<!-- Calendly badge widget end -->
 
 </head>
@@ -141,7 +141,7 @@
 								</div>
 							</div>
 						</li>
-						<li class="featured"><a onClick="Calendly.showPopupWidget('https://calendly.com/advisor-stream-demo-team'); return false;" class="btn btn-sm btn-outline-color">Book Demo</a></li>
+						<li class="featured"><a onClick="Calendly.showPopupWidget('https://calendly.com/advisor-stream-demo-team/discovery-demo/06-16-2016?back=1'); return false;" class="btn btn-sm btn-outline-color">Book Demo</a></li>
 					</ul>
 				</div>
 			</div>
@@ -157,7 +157,7 @@
 					<p class="sub-title">Give us 30 days. We'll get you new leads. </p>
 				</div>
 				<div class="animated" data-animation="fadeInUp" data-duartion="500" data-delay="200">
-					<a onClick="Calendly.showPopupWidget('https://calendly.com/advisor-stream-demo-team'); return false;" class="btn btn-outline">Book Demo</a>
+					<a onClick="Calendly.showPopupWidget('https://calendly.com/advisor-stream-demo-team/discovery-demo/06-16-2016?back=1'); return false;" class="btn btn-outline">Book Demo</a>
 				</div>
 			</div>
 		</div>
@@ -195,7 +195,7 @@
 							Over the past 6 months I now have <span class="highlight-testimonial"><strong>7 new clients which has led to $50k in profits.</strong></span></h6>
 						<p class="sub-title"><em>-John S., Independent Financial Advisor, Undisclosed Firm</em></p>
 						<br>
-						<a onClick="Calendly.showPopupWidget('https://calendly.com/advisor-stream-demo-team'); return false;" class="btn btn-outline-color">Book Demo</a>
+						<a onClick="Calendly.showPopupWidget('https://calendly.com/advisor-stream-demo-team/discovery-demo/06-16-2016?back=1'); return false;" class="btn btn-outline-color">Book Demo</a>
 					</article>
 				</div>
 
@@ -216,7 +216,7 @@
 						 </h6>
 						<p class="sub-title"><em>-Mary S., Financial Advisor, Undisclosed Firm</em></p>
 						<br>
-						<a onClick="Calendly.showPopupWidget('https://calendly.com/advisor-stream-demo-team'); return false;" class="btn btn-outline-color">Book Demo</a>
+						<a onClick="Calendly.showPopupWidget('https://calendly.com/advisor-stream-demo-team/discovery-demo/06-16-2016?back=1'); return false;" class="btn btn-outline-color">Book Demo</a>
 					</article>
 				</div>
 
@@ -233,7 +233,7 @@
 						<span class="highlight-testimonial"><strong>I'm generating 50 new leads a month </strong></span> and spending more time generating business. "</h6>
 						<p class="sub-title"><em>-Mike G., Financial Advisor</em></p>
 						<br>
-						<a onClick="Calendly.showPopupWidget('https://calendly.com/advisor-stream-demo-team'); return false;" class="btn btn-outline-color">Book Demo</a>
+						<a onClick="Calendly.showPopupWidget('https://calendly.com/advisor-stream-demo-team/discovery-demo/06-16-2016?back=1'); return false;" class="btn btn-outline-color">Book Demo</a>
 					</article>
 				</div>
 
@@ -252,7 +252,7 @@
 						 </h6>
 						<p class="sub-title"><em>-Joel Aegor, Compliance Officer</em></p>
 						<br>
-						<a onClick="Calendly.showPopupWidget('https://calendly.com/advisor-stream-demo-team'); return false;" class="btn btn-outline-color">Book Demo</a>
+						<a onClick="Calendly.showPopupWidget('https://calendly.com/advisor-stream-demo-team/discovery-demo/06-16-2016?back=1'); return false;" class="btn btn-outline-color">Book Demo</a>
 					</article>
 				</div>
 			</div>
@@ -456,7 +456,7 @@
 			</div>
 
             <div class="col-md-3 col-lg-3">
-				<a onClick="Calendly.showPopupWidget('https://calendly.com/advisor-stream-demo-team'); return false;" class="btn btn-outline" style="margin-top: 7px;">Book Demo</a>
+				<a onClick="Calendly.showPopupWidget('https://calendly.com/advisor-stream-demo-team/discovery-demo/06-16-2016?back=1/discovery-demo/06-16-2016?back=1'); return false;" class="btn btn-outline" style="margin-top: 7px;">Book Demo</a>
             </div>
 		</div>
 	</section>
