--- a/index-clickthrough.html
+++ b/index-clickthrough.html
@@ -27,6 +27,20 @@
 	<script type="text/javascript">Calendly.showBadgeWidget({url: 'https://calendly.com/advisor-stream-demo-team/discovery-demo/06-16-2016?back=1', text: 'Book Demo', color: '#5b2883', branding: false});</script>
 	<!-- Calendly badge widget end -->
 
+	<script type="text/javascript">var _kmq = _kmq || [];
+var _kmk = _kmk || '361674bfd21de4afbc943215e1e68494cd407dd8';
+function _kms(u){
+  setTimeout(function(){
+    var d = document, f = d.getElementsByTagName('script')[0],
+    s = d.createElement('script');
+    s.type = 'text/javascript'; s.async = true; s.src = u;
+    f.parentNode.insertBefore(s, f);
+  }, 1);
+}
+_kms('//i.kissmetrics.com/i.js');
+_kms('//scripts.kissmetrics.com/' + _kmk + '.2.js');
+</script>
+
 </head>
 
 <body id="landing-page" class="landing-page">
