--- a/index-clickthrough.html
+++ b/index-clickthrough.html
@@ -167,7 +167,7 @@ _kms('//scripts.kissmetrics.com/' + _kmk + '.2.js');
 		<div class="heading-block align-center centered-block">
 			<div class="container">
 				<div class="animated" data-animation="fadeIn" data-duartion="500">
-					<h2>We help financial advisors generate new leads and grow their book.</h2>
+					<h2>We help financial advisors generate new leads and grow their books.</h2>
 					<p class="sub-title">Give us 30 days. We'll get you new leads. </p>
 				</div>
 				<div class="animated" data-animation="fadeInUp" data-duartion="500" data-delay="200">
