mobile formating for testimonials

--- a/index-clickthrough.html
+++ b/index-clickthrough.html
@@ -193,81 +193,83 @@ _kms('//scripts.kissmetrics.com/' + _kmk + '.2.js');
 		</div>
 	</div>
 
-
-<!-----------------------  CANT USE THESE PHOTOS --  NEED TO GET STOCK IMAGES  -------------------------------------->
 	<section id="testimonials" class="section process-section align-center dark-text">
 		<div class="container">
 			<div class="section-content row">
-				<div class="col-sm-4 pull-right animated" data-duration="500" data-animation="fadeInRight">
-					<img src="assets/img/testimonial-headshots/John.jpg" class="img-responsive pull-right" alt="process 2" style="height: 280px; width: 470px;"/>
-				</div>
-				<div class="col-sm-8 align-left animated" data-duration="500" data-animation="fadeInLeft">
-					<br/><br/>
-					<article>
-						<h5>"I needed more referrals..."<br></h5>
-						<h6> Advisor Stream now automatically asks my clients for new referrals and the impact has been clear.
-							Over the past 6 months I now have <span class="highlight-testimonial"><strong>7 new clients which has led to $50k in profits.</strong></span></h6>
-						<p class="sub-title"><em>-John S., Independent Financial Advisor, Undisclosed Firm</em></p>
-						<br>
-						<a onClick="Calendly.showPopupWidget('https://calendly.com/advisor-stream-demo-team/discovery-demo/06-16-2016?back=1'); return false;" class="btn btn-outline-color">Book Demo</a>
-					</article>
-				</div>
-
-				<hr class="clearfix" />
-
-				<div class="col-sm-4 animated" data-duration="500" data-animation="fadeInLeft">
-					<img src="assets/img/testimonial-headshots/Mary.jpg" class="img-responsive" alt="process 3" style="height: 350px"/>
-				</div>
-				<div class="col-sm-8 align-left animated" data-duration="500" data-animation="fadeInRight">
-					<br/><br/>
-					<article>
-						 <h5>
-							 "I was losing assets and clients..."</h5>
-						 <h6>
-							 In the past I found that I was losing touch with clients and they were leaving for other advisors. AdvisorStream's weekly
-							 updates keeps constant communication with my clients and has positioned me as an expert in the field.
-							 In both 2013 and 2014, <span class="highlight-testimonial"><strong>I have reduced lost assets by 30%.</strong></span>
-						 </h6>
-						<p class="sub-title"><em>-Mary S., Financial Advisor, Undisclosed Firm</em></p>
-						<br>
-						<a onClick="Calendly.showPopupWidget('https://calendly.com/advisor-stream-demo-team/discovery-demo/06-16-2016?back=1'); return false;" class="btn btn-outline-color">Book Demo</a>
-					</article>
+				<div class="row container">
+					<div class="col-md-4 pull-right animated" data-duration="500" data-animation="fadeInRight">
+						<img src="assets/img/testimonial-headshots/John.jpg" class="img-responsive pull-right" alt="John S." id="img-john"/>
+					</div>
+					<div class="col-md-8 align-left animated" data-duration="500" data-animation="fadeInLeft">
+						<article>
+							<h5>"I needed more referrals..."<br></h5>
+							<h6> Advisor Stream now automatically asks my clients for new referrals and the impact has been clear.
+								Over the past 6 months I now have <span class="highlight-testimonial"><strong>7 new clients which has led to $50k in profits.</strong></span></h6>
+							<p class="sub-title"><em>-John S., Independent Financial Advisor, Undisclosed Firm</em></p>
+							<br>
+							<a onClick="Calendly.showPopupWidget('https://calendly.com/advisor-stream-demo-team/discovery-demo/06-16-2016?back=1'); return false;" class="btn btn-outline-color">Book Demo</a>
+						</article>
+					</div>
 				</div>
 
 				<hr class="clearfix" />
 
-				<div class="col-sm-4 pull-right animated" data-duration="500" data-animation="fadeInRight">
-					<img src="assets/img/testimonial-headshots/Mike.jpg" class="img-responsive pull-right" alt="process 2"/>
-				</div>
-				<div class="col-sm-8 align-left animated" data-duration="500" data-animation="fadeInLeft">
-					<br/><br/>
-					<article>
-						<h5>"I had no time to learn social media marketing..."<br></h5>
-						<h6>"Advisor Stream automatically posts credible articles to my Facebook, Linkedin and Twitter for me every day or week.
-						<span class="highlight-testimonial"><strong>I'm generating 50 new leads a month </strong></span> and spending more time generating business. "</h6>
-						<p class="sub-title"><em>-Mike G., Financial Advisor</em></p>
-						<br>
-						<a onClick="Calendly.showPopupWidget('https://calendly.com/advisor-stream-demo-team/discovery-demo/06-16-2016?back=1'); return false;" class="btn btn-outline-color">Book Demo</a>
-					</article>
+				<div class="row container">
+					<div class="col-md-4 animated" data-duration="500" data-animation="fadeInLeft">
+						<img src="assets/img/testimonial-headshots/Mary.jpg" class="img-responsive" alt="Mary S." id="img-mary"/>
+					</div>
+					<div class="col-md-8 align-left animated" data-duration="500" data-animation="fadeInRight">
+						<article>
+							<h5>
+								"I was losing assets and clients..."</h5>
+							<h6>
+								In the past I found that I was losing touch with clients and they were leaving for other advisors. AdvisorStream's weekly
+								updates keeps constant communication with my clients and has positioned me as an expert in the field.
+								In both 2013 and 2014, <span class="highlight-testimonial"><strong>I have reduced lost assets by 30%.</strong></span>
+							</h6>
+							<p class="sub-title"><em>-Mary S., Financial Advisor, Undisclosed Firm</em></p>
+							<br>
+							<a onClick="Calendly.showPopupWidget('https://calendly.com/advisor-stream-demo-team/discovery-demo/06-16-2016?back=1'); return false;" class="btn btn-outline-color">Book Demo</a>
+						</article>
+					</div>
 				</div>
 
 				<hr class="clearfix" />
 
-				<div class="col-sm-4 animated" data-duration="500" data-animation="fadeInLeft">
-					<img src="assets/img/testimonial-headshots/Joel.jpg" class="img-responsive" alt="process 3"/>
+				<div class="row container">
+					<div class="col-md-4 pull-right animated" data-duration="500" data-animation="fadeInRight">
+						<img src="assets/img/testimonial-headshots/Mike.jpg" class="img-responsive pull-right" alt="Mike G." id="img-mike"/>
+					</div>
+					<div class="col-md-8 align-left animated" data-duration="500" data-animation="fadeInLeft">
+						<article>
+							<h5>"I had no time to learn social media marketing..."<br></h5>
+							<h6>"Advisor Stream automatically posts credible articles to my Facebook, Linkedin and Twitter for me every day or week.
+								<span class="highlight-testimonial"><strong>I'm generating 50 new leads a month </strong></span> and spending more time generating business. "</h6>
+							<p class="sub-title"><em>-Mike G., Financial Advisor</em></p>
+							<br>
+							<a onClick="Calendly.showPopupWidget('https://calendly.com/advisor-stream-demo-team/discovery-demo/06-16-2016?back=1'); return false;" class="btn btn-outline-color">Book Demo</a>
+						</article>
+					</div>
 				</div>
-				<div class="col-sm-8 align-left animated" data-duration="500" data-animation="fadeInRight">
-					<br/><br/>
-					<article>
-						 <h5>
-							 "Content and articles that I found were always non-compliant...</h5>
-						 <h6>
-							 All AdvisorStream content is licensed and compliant with FINRA and IROC guidlines.    <span class="highlight-testimonial"><strong>I can actually use these articles."</strong></span>
-						 </h6>
-						<p class="sub-title"><em>-Joel Aegor, Compliance Officer</em></p>
-						<br>
-						<a onClick="Calendly.showPopupWidget('https://calendly.com/advisor-stream-demo-team/discovery-demo/06-16-2016?back=1'); return false;" class="btn btn-outline-color">Book Demo</a>
-					</article>
+
+				<hr class="clearfix" />
+
+				<div class="row container">
+					<div class="col-md-4 animated" data-duration="500" data-animation="fadeInLeft">
+						<img src="assets/img/testimonial-headshots/Joel.jpg" class="img-responsive" alt="Joel A." id="img-joel"/>
+					</div>
+					<div class="col-md-8 align-left animated" data-duration="500" data-animation="fadeInRight">
+						<article>
+							<h5>
+								"Content and articles that I found were always non-compliant...</h5>
+							<h6>
+								All AdvisorStream content is licensed and compliant with FINRA and IROC guidlines.    <span class="highlight-testimonial"><strong>I can actually use these articles."</strong></span>
+							</h6>
+							<p class="sub-title"><em>-Joel Aegor, Compliance Officer</em></p>
+							<br>
+							<a onClick="Calendly.showPopupWidget('https://calendly.com/advisor-stream-demo-team/discovery-demo/06-16-2016?back=1'); return false;" class="btn btn-outline-color">Book Demo</a>
+						</article>
+					</div>
 				</div>
 			</div>
 		</div>
