stretched dereks picture to fill box - need better picture

--- a/index-clickthrough.html
+++ b/index-clickthrough.html
@@ -197,10 +197,10 @@ _kms('//scripts.kissmetrics.com/' + _kmk + '.2.js');
 		<div class="container">
 			<div class="section-content row">
 				<div class="row container">
-					<div class="col-md-4 pull-right animated" data-duration="500" data-animation="fadeInRight">
+					<div class="col-sm-4 pull-right animated" data-duration="500" data-animation="fadeInRight">
 						<img src="assets/img/testimonial-headshots/John.jpg" class="img-responsive pull-right" alt="John S." id="img-john"/>
 					</div>
-					<div class="col-md-8 align-left animated" data-duration="500" data-animation="fadeInLeft">
+					<div class="col-sm-8 align-left animated" data-duration="500" data-animation="fadeInLeft">
 						<article>
 							<h5>"I needed more referrals..."<br></h5>
 							<h6> Advisor Stream now automatically asks my clients for new referrals and the impact has been clear.
@@ -215,10 +215,10 @@ _kms('//scripts.kissmetrics.com/' + _kmk + '.2.js');
 				<hr class="clearfix" />
 
 				<div class="row container">
-					<div class="col-md-4 animated" data-duration="500" data-animation="fadeInLeft">
+					<div class="col-sm-4 animated" data-duration="500" data-animation="fadeInLeft">
 						<img src="assets/img/testimonial-headshots/Mary.jpg" class="img-responsive" alt="Mary S." id="img-mary"/>
 					</div>
-					<div class="col-md-8 align-left animated" data-duration="500" data-animation="fadeInRight">
+					<div class="col-sm-8 align-left animated" data-duration="500" data-animation="fadeInRight">
 						<article>
 							<h5>
 								"I was losing assets and clients..."</h5>
@@ -237,10 +237,10 @@ _kms('//scripts.kissmetrics.com/' + _kmk + '.2.js');
 				<hr class="clearfix" />
 
 				<div class="row container">
-					<div class="col-md-4 pull-right animated" data-duration="500" data-animation="fadeInRight">
+					<div class="col-sm-4 pull-right animated" data-duration="500" data-animation="fadeInRight">
 						<img src="assets/img/testimonial-headshots/Mike.jpg" class="img-responsive pull-right" alt="Mike G." id="img-mike"/>
 					</div>
-					<div class="col-md-8 align-left animated" data-duration="500" data-animation="fadeInLeft">
+					<div class="col-sm-8 align-left animated" data-duration="500" data-animation="fadeInLeft">
 						<article>
 							<h5>"I had no time to learn social media marketing..."<br></h5>
 							<h6>"Advisor Stream automatically posts credible articles to my Facebook, Linkedin and Twitter for me every day or week.
@@ -255,10 +255,10 @@ _kms('//scripts.kissmetrics.com/' + _kmk + '.2.js');
 				<hr class="clearfix" />
 
 				<div class="row container">
-					<div class="col-md-4 animated" data-duration="500" data-animation="fadeInLeft">
+					<div class="col-sm-4 animated" data-duration="500" data-animation="fadeInLeft">
 						<img src="assets/img/testimonial-headshots/Joel.jpg" class="img-responsive" alt="Joel A." id="img-joel"/>
 					</div>
-					<div class="col-md-8 align-left animated" data-duration="500" data-animation="fadeInRight">
+					<div class="col-sm-8 align-left animated" data-duration="500" data-animation="fadeInRight">
 						<article>
 							<h5>
 								"Content and articles that I found were always non-compliant...</h5>
@@ -535,7 +535,7 @@ _kms('//scripts.kissmetrics.com/' + _kmk + '.2.js');
                         <div class="team-member">
                             <div class="photo-wrapper">
                                 <div class="overlay-wrapper">
-                                    <img src="assets/img/team/Bryan.jpg" alt="">
+                                    <img src="assets/img/team/Bryan.jpg" alt="Bryan">
                                     <div class="overlay-content">
                                         <div class="text-wrapper">
                                             <div class="text-container">
@@ -554,7 +554,7 @@ _kms('//scripts.kissmetrics.com/' + _kmk + '.2.js');
                         <div class="team-member">
                             <div class="photo-wrapper">
                                 <div class="overlay-wrapper">
-                                    <img src="assets/img/team/Derek2.jpg" alt="">
+                                    <img src="assets/img/team/Derek2.jpg" alt="Derek" style="height: 255px;">
                                     <div class="overlay-content">
                                         <div class="text-wrapper">
                                             <div class="text-container">
